testdata/rust/05_very_complex/expected/fixed_full.txt
<file path="source.rs">

trait Configurable {
    fn from_source<S: DataSource>(source: &S) -> Self
}

trait DataSource {
    type Reader<'a>: std::io::Read where Self: 'a
    type Config<T: Clone>: Clone
    
    fn get_reader<'a>(&'a self) -> Self::Reader<'a>
    fn get_config<T: Clone>(&self) -> Self::Config<T>
    fn process_with_bounds<'a, T, U>(&'a self, input: T) -> U where T: AsRef<str> + 'a, U: From<&'a str> + Default, Self::Reader<'a>: std::io::BufRead
}

struct ServerConfig {
    pub host: String,
    pub port: u16,
    internal_key: Option<String>,
}

impl Configurable for ServerConfig {
    fn from_source<S: DataSource>(source: &S) -> Self {
        // In a real macro, this would read from the source and parse.
        let _reader = source.get_reader();
        ServerConfig {
            host: "localhost".to_string(),
            port: 8080,
            internal_key: None,
        }
    }
}

fn process_all_sources<F>(sources: Vec<&dyn DataSource>, mut processor: F) where F: for<'a> FnMut(Box<dyn std::io::Read + 'a>) {
    for source in sources {
        let reader = source.get_reader();
        // The type of `reader` is tied to the lifetime of `source` in this loop iteration.
        // The closure `processor` must be able to handle this.
        processor(Box::new(reader));
    }
}

trait AdvancedContainer<const N: usize> {
    type Item<'a>: Clone where Self: 'a
    type Iterator<'a>: Iterator<Item = Self::Item<'a>> where Self: 'a
    
    fn get_items<'a>(&'a self) -> Self::Iterator<'a>
    fn process_batch<'a, F>(&'a self, f: F) -> [Option<Self::Item<'a>>; N] where F: Fn(usize) -> Option<Self::Item<'a>>
}

struct FixedArray<T: Clone, const N: usize> {
    data: [Option<T>; N],
}

impl<T: Clone, const N: usize> FixedArray<T, N> {
    pub const fn new() -> Self {
        Self {
            data: [None; N],
        }
    }
    
    -fn is_valid_index(&self, index: usize) -> bool {
        index < N
    }
    
    ~unsafe fn get_unchecked(&self, index: usize) -> Option<&T> {
        self.data.get_unchecked(index).as_ref()
    }
}

impl<T: Clone, const N: usize> AdvancedContainer<N> for FixedArray<T, N> {
    type Item<'a> = &'a T where T: 'a
    type Iterator<'a> = std::iter::FilterMap<std::slice::Iter<'a, Option<T>>, fn(&'a Option<T>) -> Option<&'a T>> where T: 'a
    
    fn get_items<'a>(&'a self) -> Self::Iterator<'a> {
        self.data.iter().filter_map(|x| x.as_ref())
    }
    
    fn process_batch<'a, F>(&'a self, f: F) -> [Option<Self::Item<'a>>; N] where F: Fn(usize) -> Option<Self::Item<'a>> {
        let mut result: [Option<Self::Item<'a>>; N] = [None; N];
        for i in 0..N {
            result[i] = f(i);
        }
        result
    }
}

trait AsyncDataProcessor {
    type Output<'a>: Send where Self: 'a
    type Error: std::error::Error + Send + Sync
    
    async fn process_async<'a>(&'a self, data: &'a [u8]) -> Result<Self::Output<'a>, Self::Error>
    async fn batch_process<'a, I>(&'a self, inputs: I) -> Vec<Result<Self::Output<'a>, Self::Error>> where I: IntoIterator<Item = &'a [u8]> + Send, I::IntoIter: Send {
        let mut results = Vec::new();
        for input in inputs {
            results.push(self.process_async(input).await);
        }
        results
    }
}

-fn main() {
    struct FileSource { path: String }
    impl DataSource for FileSource {
        type Reader<'a> = std::io::Cursor<&'a [u8]>;
        type Config<T: Clone> = T;
        
        fn get_reader<'a>(&'a self) -> Self::Reader<'a> {
            // Dummy implementation
            std::io::Cursor::new(self.path.as_bytes())
        }
        
        fn get_config<T: Clone>(&self) -> Self::Config<T> {
            T::default()
        }
        
        fn process_with_bounds<'a, T, U>(&'a self, input: T) -> U 
        where
            T: AsRef<str> + 'a,
            U: From<&'a str> + Default,
            Self::Reader<'a>: std::io::BufRead,
        {
            U::from(input.as_ref())
        }
    }

    let file_source = FileSource { path: "config.toml".to_string() };
    
    println!("Processing sources with a complex generic function.");
    process_all_sources(vec![&file_source], |mut reader| {
        let mut content = String::new();
        use std::io::Read;
        let _ = reader.read_to_string(&mut content);
        println!("Read from source: {}", content);
    });
    
    // Test const generics
    let array: FixedArray<String, 5> = FixedArray::new();
    let _ = array.get_items();
}
</file>